[gd_scene load_steps=7 format=3 uid="uid://dfwbkacp7ok57"]

[ext_resource type="Script" path="res://compare_size_game/scripts/compare_size_game.gd" id="1_3wvp2"]
[ext_resource type="Texture2D" uid="uid://d20popf2q2viw" path="res://assets/mdi--user-circle.png" id="2_48676"]
[ext_resource type="Script" path="res://compare_size_game/scripts/single_player_game_manager.gd" id="3_wn6ug"]
[ext_resource type="PackedScene" uid="uid://juaf74hugtwi" path="res://compare_size_game/scenes/play_zone.tscn" id="4_vyuhv"]

[sub_resource type="PlaneMesh" id="PlaneMesh_u7stp"]
size = Vector2(50, 24)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mv32i"]
albedo_color = Color(0.215686, 0.380392, 0.184314, 1)

[node name="Main" type="Node3D"]
script = ExtResource("1_3wvp2")

[node name="GUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Mask" type="ColorRect" parent="GUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.254902, 0.345098, 0.631373, 0.278431)

[node name="WinFailLabel" type="Label" parent="GUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -192.0
offset_top = 32.0
offset_right = 192.0
offset_bottom = 160.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 80
text = "平局..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="LocalUserAvatar" type="TextureRect" parent="GUI"]
layout_mode = 0
offset_left = 192.0
offset_top = 192.0
offset_right = 704.0
offset_bottom = 704.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_48676")

[node name="LocalUserName" type="Label" parent="GUI"]
layout_mode = 0
offset_left = 192.0
offset_top = 320.0
offset_right = 320.0
offset_bottom = 362.0
theme_override_font_sizes/font_size = 30
text = "你"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LocalUserScore" type="Label" parent="GUI"]
layout_mode = 0
offset_left = 192.0
offset_top = 360.0
offset_right = 320.0
offset_bottom = 429.0
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RemoteUserAvatar" type="TextureRect" parent="GUI"]
layout_mode = 0
offset_left = 832.0
offset_top = 192.0
offset_right = 1344.0
offset_bottom = 704.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_48676")

[node name="RemoteUserName" type="Label" parent="GUI"]
layout_mode = 0
offset_left = 832.0
offset_top = 320.0
offset_right = 960.0
offset_bottom = 362.0
theme_override_font_sizes/font_size = 30
text = "对手"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RemoteUserScore" type="Label" parent="GUI"]
layout_mode = 0
offset_left = 832.0
offset_top = 360.0
offset_right = 960.0
offset_bottom = 429.0
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="GUI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -152.0
offset_right = 192.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 50
text = "返回大厅"

[node name="HUD" type="CanvasLayer" parent="."]

[node name="WinFailIndicatorLocationMarker" type="Marker2D" parent="HUD"]
position = Vector2(960, 320)

[node name="ScoreLabel" type="Label" parent="HUD"]
visible = false
offset_left = 128.0
offset_top = 320.0
offset_right = 186.0
offset_bottom = 343.0
theme_override_font_sizes/font_size = 20
text = "分数：0"

[node name="SinglePlayerGameManager" type="Node" parent="."]
script = ExtResource("3_wn6ug")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0)
shadow_opacity = 0.65
shadow_blur = 5.0

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 20, 0)
projection = 1
size = 24.0

[node name="Table" type="Node3D" parent="."]

[node name="Surface" type="MeshInstance3D" parent="Table"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0329781, 0)
mesh = SubResource("PlaneMesh_u7stp")
surface_material_override/0 = SubResource("StandardMaterial3D_mv32i")

[node name="LocalPlayZone" parent="Table" instance=ExtResource("4_vyuhv")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.1, 8)
playable = true

[node name="RemotePlayZone" parent="Table" instance=ExtResource("4_vyuhv")]
transform = Transform3D(-1, -8.74228e-08, 0, -3.82137e-15, 4.37114e-08, 1, -8.74228e-08, 1, -4.37114e-08, 0, 0.1, -8)

[connection signal="pressed" from="GUI/Button" to="." method="_on_back_to_lobby_button_pressed"]
[connection signal="acquire_draw_card" from="Table/LocalPlayZone" to="." method="_on_local_play_zone_acquire_draw_card"]
[connection signal="player_play_card" from="Table/LocalPlayZone" to="." method="_on_local_play_zone_player_play_card"]
[connection signal="acquire_draw_card" from="Table/RemotePlayZone" to="." method="_on_remote_play_zone_acquire_draw_card"]
